--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,18 @@ rerun.txt
 pickle-email-*.html
 .project
 config/initializers/secret_token.rb
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must ends with two \r.
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
