--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 .project
-config/initializers/secret_token.rb
 
 .DS_Store
 .AppleDouble
@@ -32,3 +31,5 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+
+.env
